Add additional citiations

--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-18 14:00:41 -0500 
+%% Created for Andrew Gard at 2022-08-25 09:17:21 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{wilhelm1977,
+	author = {Gerould Wilhelm},
+	date-added = {2022-08-25 09:15:42 -0500},
+	date-modified = {2022-08-25 09:17:19 -0500},
+	institution = {Kane county urban development division},
+	title = {Ecological assessment of open land areas in Kane County, Illinois},
+	year = {1977}}
 
 @inproceedings{swink1994plants,
 	author = {Swink, Floyd and Wilhelm, Gerould and others},
