--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,12 +1,41 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-25 09:29:59 -0500 
+%% Created for Andrew Gard at 2022-08-25 12:54:16 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{rericha,
+	author = {Gerould Wilhelm and Laura Rericha},
+	date-added = {2022-08-25 12:52:27 -0500},
+	date-modified = {2022-08-25 12:54:13 -0500},
+	publisher = {Indiana Academy of Sciences},
+	title = {Flora of the Chicago Region: A Floristic and Ecological Synthesis},
+	year = {2017}}
+
+@article{ladd2015ecological,
+	author = {Ladd, DOUGLAS and Thomas, JUSTIN R},
+	date-added = {2022-08-25 12:40:17 -0500},
+	date-modified = {2022-08-25 12:40:17 -0500},
+	journal = {Phytoneuron},
+	number = {1},
+	pages = {1--274},
+	title = {Ecological checklist of the Missouri flora for floristic quality assessment},
+	volume = {12},
+	year = {2015}}
+
+@manual{Wickham:2022vf,
+	author = {Hadley Wickham and Romain Fran{\c c}ois and Lionel Henry and Kirill M{\"u}ller},
+	date-added = {2022-08-25 12:36:12 -0500},
+	date-modified = {2022-08-25 12:36:12 -0500},
+	note = {R package version 1.0.9},
+	title = {dplyr: A Grammar of Data Manipulation},
+	url = {https://CRAN.R-project.org/package=dplyr},
+	year = {2022},
+	bdsk-url-1 = {https://CRAN.R-project.org/package=dplyr}}
 
 @article{JSSv059i10,
 	abstract = {A huge amount of effort is spent cleaning data to get it ready for analysis, but there has been little research on how to make data cleaning as easy and effective as possible. This paper tackles a small, but important, component of data cleaning: data tidying. Tidy datasets are easy to manipulate, model and visualize, and have a specific structure: each variable is a column, each observation is a row, and each type of observational unit is a table. This framework makes it easy to tidy messy datasets because only a small set of tools are needed to deal with a wide range of un-tidy datasets. This structure also makes it easier to develop tidy tools for data analysis, tools that both input and output tidy datasets. The advantages of a consistent data structure and matching tools are demonstrated with a case study free from mundane data manipulation chores.},
