--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-25 12:54:16 -0500 
+%% Created for Andrew Gard at 2022-08-25 13:08:03 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{rcore,
+	address = {Vienna, Austria},
+	author = {{R Core Team}},
+	date-added = {2022-08-25 13:07:50 -0500},
+	date-modified = {2022-08-25 13:07:58 -0500},
+	organization = {R Foundation for Statistical Computing},
+	title = {R: A Language and Environment for Statistical Computing},
+	url = {https://www.R-project.org/},
+	year = {2022},
+	bdsk-url-1 = {https://www.R-project.org/}}
 
 @book{rericha,
 	author = {Gerould Wilhelm and Laura Rericha},
