--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,12 +1,17 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-25 13:08:03 -0500 
+%% Created for Andrew Gard at 2022-08-25 13:22:14 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{naturecite,
+	date-added = {2022-08-25 13:21:07 -0500},
+	date-modified = {2022-08-25 13:22:08 -0500},
+	url = {https://www.naturecite.org/}}
 
 @manual{rcore,
 	address = {Vienna, Austria},
