--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,17 +1,52 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-25 13:22:14 -0500 
+%% Created for Andrew Gard at 2022-08-30 10:13:28 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{bowles2006testing,
+	author = {Bowles, Marlin and Jones, Michael},
+	date-added = {2022-08-30 10:07:03 -0500},
+	date-modified = {2022-08-30 10:07:03 -0500},
+	journal = {Natural Areas Journal},
+	number = {1},
+	pages = {17--30},
+	publisher = {BioOne},
+	title = {Testing the efficacy of species richness and floristic quality assessment of quality, temporal change, and fire effects in tallgrass prairie natural areas},
+	volume = {26},
+	year = {2006}}
+
+@article{bauer,
+	author = {Bauer, J., Koziol, L., & Bever, J.},
+	date-added = {2022-08-30 09:42:59 -0500},
+	date-modified = {2022-08-30 09:42:59 -0500},
+	journal = {AoB PLANTS},
+	title = {Ecology of Floristic Quality Assessment: testing for correlations between coefficients of conservatism, species traits and mycorrhizal responsiveness},
+	url = {https://doi.org/10.1093/aobpla/plx073},
+	volume = 10,
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1093/aobpla/plx073}}
+
+@article{zinner,
+	author = {Zinnen, J., Spyreas, Zaya, D., Matthews, J.},
+	date-added = {2022-08-30 09:42:52 -0500},
+	date-modified = {2022-08-30 09:42:52 -0500},
+	journal = {Ecological Indicators},
+	title = {Niche ecology in Floristic Quality Assessment: Are species with higher conservatism more specialized?},
+	url = {https://doi.org/10.1016/j.ecolind.2020.107078},
+	volume = 121,
+	year = 2021,
+	bdsk-url-1 = {https://doi.org/10.1016/j.ecolind.2020.107078}}
+
 @webpage{naturecite,
 	date-added = {2022-08-25 13:21:07 -0500},
 	date-modified = {2022-08-25 13:22:08 -0500},
-	url = {https://www.naturecite.org/}}
+	url = {https://www.naturecite.org/},
+	bdsk-url-1 = {https://www.naturecite.org/}}
 
 @manual{rcore,
 	address = {Vienna, Austria},
