--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-30 10:13:28 -0500 
+%% Created for Andrew Gard at 2022-08-30 10:59:17 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{oldham1995floristic,
+	author = {Oldham, MJ and Bakowsky, WD and Sutherland, DA},
+	date-added = {2022-08-30 10:59:12 -0500},
+	date-modified = {2022-08-30 10:59:12 -0500},
+	journal = {Ontario. Natural Heritage Information Center Report, Ministry of Natural Resources, Peterborough, Ontario, Canada},
+	title = {Floristic Quality Assessment System},
+	year = {1995}}
+
+@article{freeman2012coefficients,
+	author = {Freeman, Craig C},
+	date-added = {2022-08-30 10:23:15 -0500},
+	date-modified = {2022-08-30 10:23:15 -0500},
+	journal = {Kansas Biological Survey \& RL McGregor Herbarium http://ksnhi. ku. edu/resources/plants},
+	title = {Coefficients of conservatism for Kansas vascular plants (2012) and selected life history attributes},
+	year = {2012}}
 
 @article{bowles2006testing,
 	author = {Bowles, Marlin and Jones, Michael},
@@ -31,10 +47,10 @@
 	year = 2018,
 	bdsk-url-1 = {https://doi.org/10.1093/aobpla/plx073}}
 
-@article{zinner,
+@article{zinnen,
 	author = {Zinnen, J., Spyreas, Zaya, D., Matthews, J.},
 	date-added = {2022-08-30 09:42:52 -0500},
-	date-modified = {2022-08-30 09:42:52 -0500},
+	date-modified = {2022-08-30 10:16:57 -0500},
 	journal = {Ecological Indicators},
 	title = {Niche ecology in Floristic Quality Assessment: Are species with higher conservatism more specialized?},
 	url = {https://doi.org/10.1016/j.ecolind.2020.107078},
