--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-30 11:15:25 -0500 
+%% Created for Andrew Gard at 2022-08-31 17:49:18 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -27,12 +27,13 @@
 @article{bowles2006testing,
 	author = {Bowles, Marlin and Jones, Michael},
 	date-added = {2022-08-30 10:07:03 -0500},
-	date-modified = {2022-08-30 10:07:03 -0500},
+	date-modified = {2022-08-31 17:49:04 -0500},
 	journal = {Natural Areas Journal},
 	number = {1},
 	pages = {17--30},
 	publisher = {BioOne},
 	title = {Testing the efficacy of species richness and floristic quality assessment of quality, temporal change, and fire effects in tallgrass prairie natural areas},
+	url = {https://doi.org/10.3375/0885-8608(2006)26[17:TTEOSR]2.0.CO;2},
 	volume = {26},
 	year = {2006}}
 
