Add links to refs

--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-31 17:49:18 -0500 
+%% Created for Andrew Gard at 2022-08-31 19:44:09 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -14,7 +14,8 @@
 	date-modified = {2022-08-30 10:59:12 -0500},
 	journal = {Ontario. Natural Heritage Information Center Report, Ministry of Natural Resources, Peterborough, Ontario, Canada},
 	title = {Floristic Quality Assessment System},
-	year = {1995}}
+	year = {1995},
+	bdsk-url-1 = {http://dx.doi.org/10.13140/RG.2.2.35685.91360}}
 
 @article{freeman2012coefficients,
 	author = {Freeman, Craig C},
@@ -85,13 +86,14 @@
 	year = {2017}}
 
 @article{ladd2015ecological,
-	author = {Ladd, DOUGLAS and Thomas, JUSTIN R},
+	author = {Ladd, Douglas and Thomas, Justin R},
 	date-added = {2022-08-25 12:40:17 -0500},
-	date-modified = {2022-08-25 12:40:17 -0500},
+	date-modified = {2022-08-31 17:58:47 -0500},
 	journal = {Phytoneuron},
 	number = {1},
 	pages = {1--274},
 	title = {Ecological checklist of the Missouri flora for floristic quality assessment},
+	url = {https://www.biodiversitylibrary.org/part/175050},
 	volume = {12},
 	year = {2015}}
 
@@ -141,8 +143,9 @@
 	author = {Spyreas, Greg},
 	booktitle = {Wild Things Conference 2015},
 	date-added = {2022-08-18 13:59:15 -0500},
-	date-modified = {2022-08-18 13:59:15 -0500},
+	date-modified = {2022-08-31 19:41:34 -0500},
 	title = {A Users Guide to Floristic Quality Assessment (FQI and Mean C)},
+	url = {http://www.wildthingscommunity.org/wild-things-conferences/wild-things-2015},
 	year = {2015}}
 
 @article{spyreas2019floristic,
@@ -160,11 +163,12 @@
 @article{freyman2016universal,
 	author = {Freyman, William A and Masters, Linda A and Packard, Stephen},
 	date-added = {2022-08-18 13:57:10 -0500},
-	date-modified = {2022-08-18 13:57:10 -0500},
+	date-modified = {2022-08-31 17:54:26 -0500},
 	journal = {Methods in Ecology and Evolution},
 	number = {3},
 	pages = {380--383},
 	publisher = {Wiley Online Library},
 	title = {The Universal Floristic Quality Assessment (FQA) Calculator: an online tool for ecological assessment and monitoring},
+	url = {https://doi.org/10.1111/2041-210X.12491},
 	volume = {7},
 	year = {2016}}
