--- a/vignettes/fqar.Rmd
+++ b/vignettes/fqar.Rmd
@@ -122,6 +122,44 @@ rock_garden_phys <- transect_phys(rock_garden)
 glimpse(rock_garden_phys)
 ```
 
+## Analytic functions
+
+The ${\tt fqar}$ package provides tools for analyzing species co-occurrence across multiple floristic quality assessments. A typical workflow consists of downloading a list of assessments, extracting inventories from each, then enumerating and summarizing co-occurrences of the species of interest.
+
+```{r analysis}
+# Obtain a tidy data frame of all co-occurrences in the 1995 Southern Ontario database:
+ontario <- download_assessment_list(database = 2)
+
+# Extract inventories as a list:
+ontario_invs <- assessment_list_inventory(ontario)
+
+# Enumerate all co-occurrences in this database:
+ontario_cooccurrences <- assessment_cooccurrences(ontario_invs)
+
+# Sumamrize co-occurrences in this database, one row per target species:
+ontario_cooccurrences <- assessment_cooccurrences_summary(ontario_invs)
+```
+
+Of particular note is the ${\tt species\_profile()}$ function, which returns the frequency distribution of C-values of co-occurring species for a given target species. Users may specify the optional ${\tt native}$ argument to include only native species in the profile. 
+
+For instance, Aster lateriflorus (C=0) has the following profile. 
+
+```{r profile}
+aster_profile <- species_profile("Aster lateriflorus", 
+                                 ontario_invs,
+                                 native = TRUE)
+
+ggplot(aster_profile, aes(x = cospecies_c, y = cospecies_n)) +
+  geom_col() +
+  scale_x_continuous(breaks = seq(from = 0, to = 11, by = 2)) +
+  labs(x = "Co-occurring species C values",
+       y = "Frequency",
+       title = paste(aster_profile$species, "native co-occurrence profile")) +
+  geom_vline(xintercept = aster_profile$target_c,
+             linetype = "dashed") +
+  theme_minimal()
+```
+
 ## Data sets
 
 Two tidy data sets of floristic quality data, ${\tt missouri}$ and ${\tt chicago}$, are included with the ${\tt fqar}$ package. Produced with ${\tt assessment\_list\_glance()}$, these show summary information for every floristic quality assessment that used databases 63 and 149, respectively, prior to August 14, 2022. These sets may be useful for visualization or machine-learning purposes. For instance, one might consider the relationship between richness and native mean C in sites assessed using the 2015 Missouri database:
